feat: add sponsor and Instagram section titles

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -175,6 +175,7 @@
             &times;
           </button>
         </div>
+        <h2 class="home__title--sponsor">Unterstützt von:</h2>
         <section class="home__section-logos">
           <img
             src="./images/gebhardt-logo.svg"
@@ -217,6 +218,7 @@
             class="home__img-program"
           />
         </section>
+        <h2 class="home__title">Folge uns auf Instagram:</h2>
         <section class="home__section-insta">
           <script
             src="https://cdn.commoninja.com/sdk/latest/commonninja.js"
