feat: update navigation links

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -37,10 +37,10 @@
       </label>
       <nav class="hamburger__menu" id="hamburger-menu">
         <ul class="hamburger__links">
-          <li><a href="/">Homepage</a></li>
-          <li><a href="/workshops">Workshops</a></li>
-          <li><a href="/wahlkurse">Wahlkurse</a></li>
-          <li><a href="/sfw-tag">SFW Tag</a></li>
+          <!-- <li><a href="/">Homepage</a></li> -->
+          <li><a href="#workshops">Workshops</a></li>
+          <li><a href="#courses">Wahlkurse</a></li>
+          <li><a href="#sfw-day">SFW Tag</a></li>
           <li><a href="#program">Programm</a></li>
         </ul>
       </nav>
@@ -53,7 +53,7 @@
         </div>
       </section>
       <div class="home">
-        <section>
+        <section id="workshops">
           <h2 class="home__title">Workshops</h2>
           <div class="home__articles">
             <article class="home__article">
@@ -101,11 +101,37 @@
                 nisi ut aliquip ex ea commodo consequat. Duis aute irure
               </p>
             </article>
+            <article class="home__article">
+              <a class="overlay__link" href="/workshops"></a>
+              <img
+                src="./images/workshop.jpg"
+                alt="Workshop"
+                class="home__img"
+              />
+              <h3 class="home__subtitle">Workshop 2025</h3>
+              <p class="home__text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat. Duis aute irure
+              </p>
+            </article>
           </div>
         </section>
-        <section>
+        <section id="courses">
           <h2 class="home__title">Wahlkurse</h2>
           <div class="home__articles">
+            <article class="home__article">
+              <a class="overlay__link" href="/wahlkurse"></a>
+              <img src="./images/course.jpg" alt="Wahlkurs" class="home__img" />
+              <h3 class="home__subtitle">Wahlkurs 2024</h3>
+              <p class="home__text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat. Duis aute irure
+              </p>
+            </article>
             <article class="home__article">
               <a class="overlay__link" href="/wahlkurse"></a>
               <img src="./images/course.jpg" alt="Wahlkurs" class="home__img" />
