--- a/static/styles/header.css
+++ b/static/styles/header.css
@@ -144,6 +144,28 @@ header {
     background-color: var(--primary-color);
   }
 
+  .hamburger__links li {
+    position: relative;
+  }
+
+  .hamburger__links li:after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 2px;
+    background-color: var(--text-color);
+    transform: scaleX(0);
+    transition: transform 0.2s;
+    transform-origin: left;
+  }
+
+  .hamburger__links li:hover:after {
+    transform: scaleX(1);
+    transform-origin: left;
+  }
+
   .hamburger__links a {
     font-size: 1.25rem;
     color: var(--text-color);
