--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
+    <title>SFW - Home</title>
+    <link
+      href="./images/kepler-favicon.png"
+      rel="icon"
+      type="image/vnd.microsoft.icon"
+    />
     <!-- Stylesheets -->
     <link rel="stylesheet" href="./styles/main.css" />
     <link rel="stylesheet" href="./styles/header.css" />
