feat: include direct link to license

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -266,7 +266,11 @@
         <div class="footer__container">
           <p>
             &copy; 2025 Kepler-Gymnasium Schülerforschungswerkstatt -
-            <a href="https://opensource.org/licenses/MIT">MIT</a>
+            <a
+              href="https://github.com/plesioo/SFW-Website/blob/master/LICENSE"
+              title="View source code license"
+              >MIT</a
+            >
           </p>
           <a>Datenschutz</a>
           <a>Impressum</a>
