--- a/layouts/index.html
+++ b/layouts/index.html
@@ -173,11 +173,61 @@
           </div>
         </section>
         <section id="program" class="home__section">
+          <div class="home__container--wheels">
+            <img
+              src="./images/gear.svg"
+              class="home__img--wheel wheel1"
+              alt=""
+              aria-hidden="true"
+            />
+            <img
+              src="./images/gear.svg"
+              class="home__img--wheel wheel2"
+              alt=""
+              aria-hidden="true"
+            />
+            <img
+              src="./images/gear.svg"
+              class="home__img--wheel wheel3"
+              alt=""
+              aria-hidden="true"
+            />
+            <img
+              src="./images/gear.svg"
+              class="home__img--wheel wheel4"
+              alt=""
+              aria-hidden="true"
+            />
+            <img
+              src="./images/gear.svg"
+              class="home__img--wheel wheel5"
+              alt=""
+              aria-hidden="true"
+            />
+            <img
+              src="./images/gear.svg"
+              class="home__img--wheel wheel6"
+              alt=""
+              aria-hidden="true"
+            />
+            <img
+              src="./images/gear.svg"
+              class="home__img--wheel wheel7"
+              alt=""
+              aria-hidden="true"
+            />
+            <img
+              src="./images/gear.svg"
+              class="home__img--wheel wheel8"
+              alt=""
+              aria-hidden="true"
+            />
+          </div>
           <h2 class="home__title">Unser Programm</h2>
           <img
             src="./images/sfw-program.jpg"
             alt="Programm"
-            class="home__img-program"
+            class="home__img--program"
             id="image-viewer-trigger"
             tabindex="0"
           />
@@ -207,50 +257,50 @@
           </button>
         </div>
         <h2 class="home__title--sponsor">Unterstützt von:</h2>
-        <section class="home__section-logos">
+        <section class="home__section--logos">
           <img
             src="./images/gebhardt-logo.svg"
             alt="Gebhardt Logo"
-            class="home__img-program"
+            class="home__img--program"
           />
           <img
             src="./images/hoehbauer-logo.svg"
             alt="Höhbauer Logo"
-            class="home__img-program"
+            class="home__img--program"
           />
           <img
             src="./images/jugend-forscht-logo.svg"
             alt="Jugend forscht Logo"
-            class="home__img-program"
+            class="home__img--program"
           />
           <img
             src="./images/nexans-logo.svg"
             alt="Nexans Logo"
-            class="home__img-program"
+            class="home__img--program"
           />
           <img
             src="./images/novem-logo.svg"
             alt="Novem Logo"
-            class="home__img-program"
+            class="home__img--program"
           />
           <img
             src="./images/oth-logo.svg"
             alt="OTH Weiden Logo"
-            class="home__img-program"
+            class="home__img--program"
           />
           <img
             src="./images/tiki-logo.svg"
             alt="Tiki Logo"
-            class="home__img-program"
+            class="home__img--program"
           />
           <img
             src="./images/uebzo-logo.svg"
             alt="ÜBZO Logo"
-            class="home__img-program"
+            class="home__img--program"
           />
         </section>
         <h2 class="home__title">Folge uns auf Instagram:</h2>
-        <section class="home__section-insta">
+        <section class="home__section--insta">
           <script
             src="https://cdn.commoninja.com/sdk/latest/commonninja.js"
             defer
@@ -291,7 +341,7 @@
           >Phillip Fleischer</a
         >,
         <br />
-        design help by <span class="underline">Stefan Heidel</span>
+        designed with <span class="underline">Stefan Heidel</span>
       </p>
     </footer>
     {{ $imageViewerJS := resources.Get "js/image-viewer.js" | minify |
