feat: clean up styles and improve layout

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -335,7 +335,7 @@
         </div>
       </div>
 
-      <p class="footer__author">
+      <p class="footer__text--author">
         Made by
         <a href="https://github.com/plesioo" class="footer__link underline"
           >Phillip Fleischer</a
