--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -151,4 +151,7 @@ body {
   font-family: "Inter", sans-serif;
   color: var(--text-color);
   background-color: var(--background-color);
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
