refactor: move styles to asset folder to use pipelines

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -11,12 +11,18 @@
       type="image/vnd.microsoft.icon"
     />
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="./styles/main.css" />
-    <link rel="stylesheet" href="./styles/header.css" />
-    <link rel="stylesheet" href="./styles/hero.css" />
-    <link rel="stylesheet" href="./styles/home.css" />
-    <link rel="stylesheet" href="./styles/image-viewer.css" />
-    <link rel="stylesheet" href="./styles/footer.css" />
+    {{- $mainCss := resources.Get "css/main.css" | minify | fingerprint -}}
+    <link rel="stylesheet" href="{{ $mainCss.RelPermalink }}" integrity="{{ $mainCss.Data.Integrity }}" />
+    {{- $headerCss := resources.Get "css/header.css" | minify | fingerprint -}}
+    <link rel="stylesheet" href="{{ $headerCss.RelPermalink }}" integrity="{{ $headerCss.Data.Integrity }}" />
+    {{- $footerCss := resources.Get "css/footer.css" | minify | fingerprint -}}
+    <link rel="stylesheet" href="{{ $footerCss.RelPermalink }}" integrity="{{ $footerCss.Data.Integrity }}" />
+    {{- $heroCss := resources.Get "css/hero.css" | minify | fingerprint -}}
+    <link rel="stylesheet" href="{{ $heroCss.RelPermalink }}" integrity="{{ $heroCss.Data.Integrity }}" />
+    {{- $homeCss := resources.Get "css/home.css" | minify | fingerprint -}}
+    <link rel="stylesheet" href="{{ $homeCss.RelPermalink }}" integrity="{{ $homeCss.Data.Integrity }}" />
+    {{- $imageViewerCss := resources.Get "css/image-viewer.css" | minify | fingerprint -}}
+    <link rel="stylesheet" href="{{ $imageViewerCss.RelPermalink }}" integrity="{{ $imageViewerCss.Data.Integrity }}" />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
