refactor: reorganize images folder and update image paths in codebase

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -181,49 +181,49 @@
         <section id="program" class="home__section">
           <div class="home__container--wheels">
             <img
-              src="./images/gear.svg"
+              src="./images/page/gear.svg"
               class="home__img--wheel wheel1"
               alt=""
               aria-hidden="true"
             />
             <img
-              src="./images/gear.svg"
+              src="./images/page/gear.svg"
               class="home__img--wheel wheel2"
               alt=""
               aria-hidden="true"
             />
             <img
-              src="./images/gear.svg"
+              src="./images/page/gear.svg"
               class="home__img--wheel wheel3"
               alt=""
               aria-hidden="true"
             />
             <img
-              src="./images/gear.svg"
+              src="./images/page/gear.svg"
               class="home__img--wheel wheel4"
               alt=""
               aria-hidden="true"
             />
             <img
-              src="./images/gear.svg"
+              src="./images/page/gear.svg"
               class="home__img--wheel wheel5"
               alt=""
               aria-hidden="true"
             />
             <img
-              src="./images/gear.svg"
+              src="./images/page/gear.svg"
               class="home__img--wheel wheel6"
               alt=""
               aria-hidden="true"
             />
             <img
-              src="./images/gear.svg"
+              src="./images/page/gear.svg"
               class="home__img--wheel wheel7"
               alt=""
               aria-hidden="true"
             />
             <img
-              src="./images/gear.svg"
+              src="./images/page/gear.svg"
               class="home__img--wheel wheel8"
               alt=""
               aria-hidden="true"
@@ -231,7 +231,7 @@
           </div>
           <h2 class="home__title">Unser Programm</h2>
           <img
-            src="./images/sfw-program.jpg"
+            src="./images/page/sfw-program.jpg"
             alt="Programm"
             class="home__img--program"
             id="image-viewer-trigger"
@@ -248,7 +248,7 @@
           <div class="image-viewer__overlay" id="image-viewer-overlay"></div>
           <div class="image-viewer__container">
             <img
-              src="./images/sfw-program.jpg"
+              src="./images/page/sfw-program.jpg"
               alt="Programm"
               class="image-viewer__img"
               id="image-viewer-img"
@@ -265,42 +265,42 @@
         <h2 class="home__title--sponsor">Unterstützt von:</h2>
         <section class="home__section--logos">
           <img
-            src="./images/gebhardt-logo.svg"
+            src="./images/logos/gebhardt-logo.svg"
             alt="Gebhardt Logo"
             class="home__img--program"
           />
           <img
-            src="./images/hoehbauer-logo.svg"
+            src="./images/logos/hoehbauer-logo.svg"
             alt="Höhbauer Logo"
             class="home__img--program"
           />
           <img
-            src="./images/jugend-forscht-logo.svg"
+            src="./images/logos/jugend-forscht-logo.svg"
             alt="Jugend forscht Logo"
             class="home__img--program"
           />
           <img
-            src="./images/nexans-logo.svg"
+            src="./images/logos/nexans-logo.svg"
             alt="Nexans Logo"
             class="home__img--program"
           />
           <img
-            src="./images/novem-logo.svg"
+            src="./images/logos/novem-logo.svg"
             alt="Novem Logo"
             class="home__img--program"
           />
           <img
-            src="./images/oth-logo.svg"
+            src="./images/logos/oth-logo.svg"
             alt="OTH Weiden Logo"
             class="home__img--program"
           />
           <img
-            src="./images/tiki-logo.svg"
+            src="./images/logos/tiki-logo.svg"
             alt="Tiki Logo"
             class="home__img--program"
           />
           <img
-            src="./images/uebzo-logo.svg"
+            src="./images/logos/uebzo-logo.svg"
             alt="ÜBZO Logo"
             class="home__img--program"
           />
