refactor: use baseof for index layout

--- a/assets/css/hero.css
+++ b/assets/css/hero.css
@@ -1,5 +1,5 @@
 .hero {
-  background-image: url("../images/sfw-hero-bg.png");
+  background-image: url("../images/page/sfw-hero-bg.png");
   background-color: white;
   width: 100%;
   height: 45vh;
