--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -14,10 +14,10 @@
     </div>
     <div class="footer__container--socials">
       <a href="https://github.com/plesioo/SFW-Website">
-        <img src="/images/github-logo.svg" alt="Github Logo" />
+        <img src="/images/logos/github-logo.svg" alt="Github Logo" />
       </a>
       <a href="https://www.instagram.com/sfwamkgw/">
-        <img src="/images/insta-logo.svg" alt="Instagram Logo" />
+        <img src="/images/logos/insta-logo.svg" alt="Instagram Logo" />
       </a>
     </div>
   </div>
