--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,7 +1,7 @@
 <header>
   <div class="logo__container">
     <img
-      src="/images/kepler-logo.svg"
+      src="/images/logos/kepler-logo.svg"
       class="logo__image"
       alt="Kepler Gymnasium Logo"
     />
