--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -155,3 +155,12 @@ body {
   flex-direction: column;
   min-height: 100vh;
 }
+
+.overlay__link {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  text-decoration: none;
+}
