--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -1,12 +1,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SFW - {{ .Title }}</title>
+  <title>{{ .Site.Title }} - {{ .Title }}</title>
   <link
-  href="./images/page/kepler-favicon.png"
-  rel="icon"
-  type="image/vnd.microsoft.icon"
-/>
+    href="/images/page/kepler-favicon.png"
+    rel="icon"
+    type="image/x-icon"
+  />
   {{- $mainCss := resources.Get "css/main.css" | minify | fingerprint -}}
   <link rel="stylesheet" href="{{ $mainCss.RelPermalink }}" integrity="{{ $mainCss.Data.Integrity }}" />
   {{- $headerCss := resources.Get "css/header.css" | minify | fingerprint -}}
